Fixed message not showing

--- a/ClashRoyaleClanWarsApp/src/app/components/players/players.component.scss
+++ b/ClashRoyaleClanWarsApp/src/app/components/players/players.component.scss
@@ -88,7 +88,7 @@
     .stats{
         justify-items: center;
         margin: auto auto;
-        margin-top: 10%;
+        margin-top: 5%;
         
     }
   
